--- a/index.html
+++ b/index.html
@@ -13,24 +13,8 @@
 
             <h2 class="subtitle">Choose your mascot</h2>
 
-            <div class="cards">
-                    <input type="radio" name="mascot-radio" id="hipodoge">
-                    <label class="mascot-card" for="hipodoge">
-                        <p>Hipodoge</p>
-                        <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="Hipodoge">
-                    </label>
-
-                    <input type="radio" name="mascot-radio" id="capipepo">
-                    <label class="mascot-card" for="capipepo">
-                        <p>Capipepo</p>
-                        <img src="./assets/mokepons_mokepon_capipepo_attack.png" alt="Capipepo">
-                    </label>
-
-                    <input type="radio" name="mascot-radio" id="ratigueya">
-                    <label class="mascot-card" for="ratigueya">
-                        <p>Ratigueya</p>
-                        <img src="./assets/mokepons_mokepon_ratigueya_attack.png" alt="Ratigueya">
-                    </label>
+            <div id="cards-container" class="cards">
+                    
             </div>
                 <button id="select-mascot-button">Select</button>
         </section>
