Logic change from lives to wins and frontend optimization

--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
 
             <h2 class="subtitle">Choose your attack</h2>
 
-            <div id="attack-buttons">
-                <button id="fire-button" class="attack-button">Fire 🔥</button>
-                <button id="water-button" class="attack-button">Water 💧</button>
-                <button id="earth-button" class="attack-button">Earth 🌱</button>
+            <div id="attack-container" class="attack-buttons">
+                
             </div>
 
                 <div id="messages">
@@ -38,19 +36,19 @@
                 </div>
 
             <div id="attack-messages">
-                <div class="health">
-                    <p id="player-health">3</p>
+                <div class="counter">
+                    <p id="player-victories">0</p>
                     <p id="player-mascot"></p>
                     <div id="player-attacks"></div>
                 </div>
 
-                <div class="health">
-                    <p id="enemy-health">3</p>
+                <div class="counter">
+                    <p id="enemy-victories">0</p>
                     <p id="enemy-mascot"></p>
                     <div id="enemy-attacks"></div>
                 </div>
             </div>
         </section>
-        <script src="./js/script.js"></script>
+        <script src="/js/script.js"></script>
     </body>
 </html>
